--- a/FIFA2020_analysis.ipynb
+++ b/FIFA2020_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of FIFA2020"
+    "# Analysis of FIFA2020 players"
    ]
   },
   {
